--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
             <div id="clock"></div>
         </div>
         <div class="main">
-           
+           <div class="widget">
+              <h3>Classes</h3>
+           </div>
+           <div class="widget">
+              <h3>To be graded</h3>
+           </div>
+           <div class="widget">
+               <h3>Office Hours</h3>
+           </div>
         </div>
     </div>
 </body>
