added date and changed name

--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
     <div class="container">
         <div class="top">
             <div id="date">Date</div>
-            <h1>Teacher's Personal Desktop</h1>
+            <h1>John's Personal Desktop</h1>
             <div id="clock"></div>
         </div>
         <div class="main">
            <div class="widget">
-              <h3>Classes</h3>
+              <h3>c1</h3>
            </div>
            <div class="widget">
-              <h3>To be graded</h3>
+              <h3>c2</h3>
            </div>
            <div class="widget">
-               <h3>Office Hours</h3>
+               <h3>c3</h3>
            </div>
         </div>
     </div>
