--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
         </div>
         <div class="main">
            <div class="widget">
-              <h3>Widget 01</h3>
+                <h3>Notepad</h3>
+                <div class="notepad">
+                    <textarea id="note-area" name="message" rows="20" cols="40">
+                    </textarea>
+                </div>
+                <p>
+                    <button id="saveNoteBtn">Save</button>
+                </p>
            </div>
            <div class="widget">
               <h3>Widget 02</h3>
@@ -30,6 +37,15 @@
 </body>
 
 <script>
+    try{
+        var loadNotes = localStorage.getItem("notes");
+    }
+    catch(err){
+        var loadNotes = "Enter your notes here and click 'Save'";
+    }
+
+    $("#note-area").val(loadNotes);
+
    var sp = '/';
    var today = new Date();
    var dd = today.getDate();
@@ -43,6 +59,11 @@
    }
 
    $('#date').html(mm+sp+dd+sp+yyyy);
+
+   $('#saveNoteBtn').click(function(){
+    var currentNotes = $("#note-area").val();
+    localStorage.setItem("notes", currentNotes);
+   });
 </script>
 </html>
 
